cmake_minimum_required(VERSION 3.8)
project(turtlebot3_hardware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(pluginlib REQUIRED)
find_package(dynamixel_sdk REQUIRED)

add_library(turtlebot3_hardware SHARED
  src/turtlebot3_hardware.cpp
)

ament_target_dependencies(turtlebot3_hardware
  rclcpp
  hardware_interface
  pluginlib
  dynamixel_sdk
)

target_include_directories(turtlebot3_hardware PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

install(TARGETS
  turtlebot3_hardware
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

pluginlib_export_plugin_description_file(hardware_interface turtlebot3_hardware.xml)
ament_package()
