<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_hardware</name>
  <version>0.0.0</version>
  <description>Hardware interface for turtlebot3</description>
  <maintainer email="peter.rose@terex.com">peter.rose</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>dynamixel_sdk</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface>
      <pluginlib plugin="${prefix}/turtlebot3_hardware.xml"/>
    </hardware_interface>
  </export>
</package>
